solc_mutator_ossfuzz_seed_corpus/test_solidity/test_eed763a767143ca1e5ec4571cb544cd788477762213af34aef535b6274b870d8_42c20b7df4ff0762a4c20e39c557e33da7f6f49b_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(int224 i0,function () external   returns (bytes memory) i1)     returns(address payable o0)
{
  if (false)
  {
  }
  else if (((true && ((int192(2287833941159986649323185757825156139194145601258501728242) | int192(0)) != int192(3138550867693340381917894711603833208051177722232017256447))) || true))
  {
  }
}
error er0(bool[1] ep0);
contract C0 {
  function f1(address[1] calldata i0) public virtual  
  {
    unchecked {
      if (false)
      {
        revert er0([false]);
      }
      else
      {
        if ((false || true))
        {
        }
        else if (true)
        {
        }
        else if ((!(true)))
        {
        }
      }
      revert er0([true]);
      assembly
      {
      }
    }
    { }
  }
  event ev0();
  modifier m0() virtual
  {
    _;
  }
  function f2(address payable i0,function (string memory) external   returns (string memory) i1,function (uint112, uint160, uint128) external   returns (uint192, address payable, uint256) i2) external virtual m0() 
  {
    revert er0([true]);
    if (false)
    {
    }
    else
    {
    }
  }
  address   s0 = address(this);
  bool   s1 = false;
  function f3(bool[2] calldata i0) private   
  {
    if ((bytes28(0x00000000000000000000000000000000000000000000000000000000) > bytes28(0x00000000000000000000000000000000000000000000000000000000)))
    {
      for(      bytes16 l0 = bytes16(0x00000000000000000000000000000000);
false;
payable(address(this)))
      {
        continue;
        assembly
        {
          switch s1
          default
          {
          }
        }
      }
    }
    delete s1;
  }
  modifier m1(bool i0) virtual
  {
    address l0 = address(this);
    revert er0([true]);
    bool l1 = (bytes26(0x0000000000000000000000000000000000000000000000000000) != bytes26(0x0000000000000000000000000000000000000000000000000000));
    _;
  }
  error er1();
  type T0 is address;
  event ev1(function () external   returns (uint208) indexed ep0);
  modifier m2() virtual
  {
    _;
  }
}
type T1 is int96;
pragma solidity >= 0.0.0;
// ----
// Warning 9592: (su0.sol:1514-1565): "switch" statement with only a default case.
// TypeError 1408: (su0.sol:1521-1523): Only local variables are supported. To access storage variables, use the ".slot" and ".offset" suffixes.
